...
                .onAppear { selectedTab = 0}
                .tag(0)
            
            ExploreView()
                .tabItem {
                    Image(systemName: "person.2.wave.2")
                    Text("People")
                }
                .accessibilityIdentifier("tab.explore")
                .onAppear { selectedTab = 1}
                .tag(1)
            
            //CreateThreadView()
...
                .tag(2)
            
            ActivityView()
                .tabItem {
                    Image(systemName: selectedTab == 3 ? "waveform.path.ecg.rectangle.fill" : "waveform.path.ecg.rectangle")
                        .environment(\.symbolVariants, selectedTab == 3 ? .fill : .none)
                    Text("Activity")
                }
                .accessibilityIdentifier("tab.activity")
                .onAppear { selectedTab = 3}
                .tag(3)
            
            CurrentUserProfileView()
...
